Fix Zoom button labels and spacing

--- a/src/components/LayerToggle/LayerToggleSummer.less
+++ b/src/components/LayerToggle/LayerToggleSummer.less
@@ -2,6 +2,7 @@
 @import '../../styles/Layers.less';
 
 .round-button {
+  pointer-events: all;
   box-shadow: @base-shadow;
   outline: none;
   transition: background-color ease-in-out 60ms;
