--- a/src/containers/SideBar/SideBar.less
+++ b/src/containers/SideBar/SideBar.less
@@ -16,18 +16,16 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
-.side-bar-buttons {
+ .side-bar__grid {
+  display: grid;
+  grid-template-columns: 2rem;
+  grid-auto-rows: 2rem;
+  grid-gap: 1rem 0.25rem;
   position: fixed;
+  pointer-events: none;
   z-index: 2;
   right: 0;
   top: 1rem;
   width: 2.5rem;
   height: 100vh;
-}
-
-.side-bar-buttons--grid {
-  display: grid;
-  grid-template-columns: 2rem;
-  grid-auto-rows: 2rem;
-  grid-gap: 1rem 0.25rem;
 }
